# SfilyaSumBot

./: .dockerignore  .env.debug.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.ru.md  Taskfile.yml  anonymizer.py  bot.py  check_models.py  chunk_prompt.md  config.py  docker-compose.yml  prompt.md  pyproject.toml  requirements.txt
artifacts/traces/: jaeger-traces-sumbot-1h-20260601T223423Z.json
docs/: architecture.md  monitoring.md  project-history.md  security-notes.md
migrations/: env.py
migrations/versions/: 9b4a1c2d3e4f_track_all_bot_chats.py  a1b2c3d4e5f6_merge_summary_feedback_and_counters_heads.py  (+9 more)
scripts/: benchmark_anonymizer.py  benchmark_quality.py  export_jaeger_traces.py
sumbot/: __init__.py  app.py  chat_approval.py  chat_registry.py  chunk_worker.py  chunks.py  constants.py  daily_digest.py  database.py  engagement.py  feedback.py  history.py  llm.py  logging_setup.py  metrics.py  prompt_builder.py  services.py  summary_assembly.py  summary_context.py  summary_validation.py  tracing.py
tests/: test_admin_chat_runtime.py  test_analytics_export.py  test_analytics_report.py  test_analytics_visualization.py  test_anonymizer.py  test_chat_approval.py  test_chat_registry.py  test_chunks.py  test_daily_digest.py  test_database.py  test_engagement.py  test_feedback.py  test_handlers.py  test_history.py  test_llm.py  test_prompt_builder.py  test_send_analytics_report.py  test_services.py  test_summary_assembly.py  test_summary_context.py  test_summary_validation.py
tools/: __init__.py
(+40 files in other folders)
