[project]
name = "sammeri"
version = "0.1.0"
description = "Telegram bot that summarizes chat history with an LLM"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.0",
    "redis>=5.0.0",
    "openai>=1.10.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.34.0",
    "opentelemetry-sdk>=1.34.0",
    "opentelemetry-exporter-otlp-proto-http>=1.34.0",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "radon>=6.0.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
